--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "babel-preset-env": "^1.7.0",
-    "express": "^4.17.1"
-  },
-  "devDependencies": {
+    "express": "^4.17.1",
     "babel-cli": "^6.26.0"
   }
 }
