upgraded babel to newest version

--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "babel-preset-env": "^1.7.0",
-    "express": "^4.17.1",
-    "babel-cli": "^6.26.0"
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
+    "express": "^4.17.1"
   }
 }
